--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://shortstring.github.io/Personal-Website",
+    "homepage": "https://shortstring.github.io/",
     "name": "personal-website",
     "version": "0.1.0",
     "private": true,
